[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steam_auth"
version = "0.1.0"
description = "Steam authentication orchestration library for long-running automation services."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "iBuyPower47" },
]
keywords = ["steam", "steam-auth", "automation", "bot", "session", "trading"]
dependencies = [
  "requests>=2.33,<3",
  "steampy @ git+https://github.com/iBuyPower47/steampy.git@445689779af23cc8393e0caef3f42c81e4101732",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
crypto = [
  "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/iBuyPower47/Steam_auth"
Repository = "https://github.com/iBuyPower47/Steam_auth"
Issues = "https://github.com/iBuyPower47/Steam_auth/issues"

[tool.setuptools]
packages = ["steam_auth"]
include-package-data = false
license-files = ["LICENSE"]

[tool.setuptools.package-dir]
steam_auth = "."
